finished ui for fridge section and recipe image section, still need to fix responsive layout issues

--- a/src/components/FridgeGridSection/FridgeGridSection.module.scss
+++ b/src/components/FridgeGridSection/FridgeGridSection.module.scss
@@ -24,7 +24,7 @@
   grid-template-columns: 1fr 3fr;
   grid-template-rows: 47vh;
   font-family: 'Raleway', sans-serif;
-  background-color: purple;
+  background-color: white;
 }
 
 /* Left Side Fridge Section */
@@ -51,12 +51,12 @@ h2 {
   height: 70px;
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
+  cursor: pointer;
 }
 
 .fridge_data_section > button:hover {
   background-color: #95a5a6;
   color: white;
-  letter-spacing: 1.5px;
   transition: 0.3s ease-in-out;
 }
 
@@ -65,6 +65,7 @@ h2 {
   list-style: none;
   margin: 0;
   padding: 0;
+  padding-top: 15px;
 }
 
 /*********** Media Queries *************/
@@ -86,6 +87,17 @@ h2 {
     justify-content: space-between;
     text-align: left;
     order: 1;
+  }
+
+  .fridge_data_section > button {
+    background-color: white;
+    color: black;
+    border: none;
+    height: 70px;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 700;
+    cursor: pointer;
+    position: relative;
   }
 
   .fridge_data_text > p,
